<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"

    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_category"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_weight=".1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight=".8">

            <TextView
                android:id="@+id/date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic"/>
            <TextView
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic"/>




        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>

